# pysrpm

./: .gitignore  Makefile  README.md  defaults.conf  pysrpm.py  setup.cfg
pysrpm/: __init__.py  __main__.py  convert.py  rpm.py
pysrpm/presets/: 00-base.conf  00-defaults.conf  20-fedora.conf  20-opensuse.conf  30-fedora-pre8.conf
templates/: base.cfg
tests/: test_conversion.py  test_rpm_builing.py  test_templating.py
tests/setupcfg_package/: setup.cfg
tests/toml_package/: pyproject.toml
