[metadata]
name = package
version = 0.0.0
description = A sample package
readme = Hello world!
keywords = test, hello world, sample, packaging
author = Cimbali
author_email = me@cimba.li
url = https://sample-package.github.io
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
python_require = >=3.8
install_requires =
    pyparsing>=2.0.1,!=2.0.4,!=2.1.2,!=2.1.6
    babel>=1.3,!=2.0
    pbr!=2.1.0,>=2.0.0
    enum34; python_version < '3.4'
    foo; os_name != 'nt' and implementation_name == 'cython'
    bar; platform_machine != 'x86' and platform_release > '5.14'
    win32; os_name == 'nt'

[options.extras_require]
test =
    pytest ~= 5.0

[options.entry_points]
console_scripts =
    package-cli = package:main_cli
gui_scripts =
    package-gui = package:main_gui
